--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
-.App {
-  text-align: center;
+#store-label{
+    text-align: center;
+    font-size: 27px;
+}
+#shop{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+    align-items: center;
+    gap: 20px;
+    margin: 20px;
+}
+.item-names{
+    font-size: large;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.items{
+    display: flex;
+    flex-direction: column;
+    padding: 10px 20px 10px 20px;
+    border: 1px solid #d9e1c0;
+    background-color: #e0e1dd;
+    border-radius: 20px;
+}
+.buy-button{
+    padding: 6px;
+    border: 1px solid rgb(60, 60, 174);
+    background-color: rgb(60, 60, 174);
+    border-radius: 9px;
+    color: aliceblue;
+    cursor: pointer;
+}
+.buy-button:hover{
+    background-color: rgb(81, 81, 206);
+    border: 1px solid rgb(81, 81, 206);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+.App{
+    display: flex;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#store-side{
+    flex: 8;
+}
+#checkout-side{
+    flex: 2;
+}
+#list-products{
+    max-height: 200px;
+    width: max-content;
+    overflow-y: scroll;
+    padding: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+#checkout{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid #f7f7f7;
+    background-color: #f7f7f7;
+    margin: 20px;
+    width: auto;
+    height: auto;
+    padding: 20px;
+    height: auto;
+    border-radius: 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#total-value{
+    padding: 10px 30px 10px 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 0.4px solid gray;
+    border-radius: 10px;
+}
+#button-div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#total-price{
+    font-size: large;
 }
